:art: changed the class name for the div showing the background image to avoid overlapping in invest and social impact page

--- a/client/src/style/invest-comp-1.css
+++ b/client/src/style/invest-comp-1.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap');
 
 
-.component-one {
+.component-one-2 {
     background-image: url("../../src/assets/images/invest-page-images/dark-to-light_xrat5g.jpg");
     background-size: cover;
     background-position: center center;
